--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "test": "node ./test.js"
+    "test": "node ./test/test.js"
   },
   "author": "Whien_Liou <sal95610@gmail.com>",
   "files": [
-    "index.js",
+    "lib",
     "README.md"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "hoist-non-react-statics": "^1.2.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  }
 }
