--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "test": "node ./test/test.js"
+    "test": "node ./test/test.js",
+    "build": "babel src -d lib"
   },
   "author": "Whien_Liou <sal95610@gmail.com>",
   "files": [
@@ -16,6 +17,9 @@
     "hoist-non-react-statics": "^1.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "react": "^15.4.2",
